test/importers/invalid/duplicate_columns_importer.rb
class DuplicateColumnsImporter < CSVParty
  column :product, header: "Product"
  column :product, header: "Product"
end
